fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
   background: #130f23;
   font-size: 1.6rem;
   font-family: "Cormorant", sans-serif;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
